--- a/src/Publisher.mxml
+++ b/src/Publisher.mxml
@@ -49,7 +49,7 @@
 			}
 			
 			private function onClose():void{
-				controller.detach();
+				if (controller) controller.detach();
 			}			
 			
 			private function pathInput_changeHandler(event:Event):void
@@ -82,7 +82,7 @@
 				controller.changeCompositionToLastCreated();
 				fileListDG.selectedIndex = model.dataGridProvider.length - 1;
 				fileListDG.setFocus();
-				fileListDG.editedItemPosition = {rowIndex:model.dataGridProvider.length - 1, columnIndex:2};
+				fileListDG.editedItemPosition = {rowIndex:model.dataGridProvider.length - 1, columnIndex:1};
 			}
 			
 			protected function fileListDG_itemFocusOutHandler(event:DataGridEvent):void
@@ -150,7 +150,8 @@
 			protected function csxswindowedapplication2_focusOutHandler(event:FocusEvent):void
 			{
 				model.pathToPublish = pathInput.text;
-				model.save();
+				model.save(); //todo: если приложение закрывается, то не приводить к model.save
+				
 			}
 			
 		]]>
@@ -190,15 +191,26 @@
 			includeInLayout="{this.visible}">
 		
 		<mx:VBox width="100%" height="100%" verticalGap="3">
-			<mx:DataGrid id="fileListDG" width="100%" height="100%" backgroundAlpha="0.0"
-						 borderStyle="none" doubleClickEnabled="true" editable="true"
-						 horizontalGridLineColor="0x999999" horizontalGridLines="true"
+			<mx:DataGrid id="fileListDG" 
+						 width="100%" 
+						 height="100%" 
+						 backgroundAlpha="0.0"
+						 borderStyle="none" 
+						 doubleClickEnabled="true" 
+						 editable="true"
+						 horizontalGridLineColor="0x999999" 
+						 horizontalGridLines="true"
 						 itemClick="fileListDG_itemClickHandler(event)"
 						 itemDoubleClick="fileListDG_itemDoubleClickHandler(event)"
-						 itemFocusOut="fileListDG_itemFocusOutHandler(event)" resizableColumns="true"
-						 rollOverColor="0xE0E0E0" rowCount="{model.dataGridProvider.length}"
-						 selectionColor="0x3399FF" selectionDuration="0" showHeaders="false"
-						 textSelectedColor="0xFFFFFF" verticalGridLineColor="0xB2B2B2"
+						 itemFocusOut="fileListDG_itemFocusOutHandler(event)" 
+						 resizableColumns="true"
+						 rollOverColor="0xE0E0E0" 
+						 rowCount="{model.dataGridProvider.length}"
+						 selectionColor="0x3399FF" 
+						 selectionDuration="0" 
+						 showHeaders="true"
+						 textSelectedColor="0xFFFFFF" 
+						 verticalGridLineColor="0xB2B2B2"
 						 verticalGridLines="false"
 						 >
 				<mx:ArrayCollection id="dataGridProvider" collectionChange="dataGridProvider_collectionChangeHandler(event)"/>
@@ -216,12 +228,44 @@
 							</mx:Component>                         
 						</mx:itemRenderer> 
 					</mx:DataGridColumn>
-					<mx:DataGridColumn dataField="artboardName" editable="false" headerText="Artboard"
-									   labelFunction="hyphenate"/>
+<!--					<mx:DataGridColumn dataField="artboardName" editable="false" headerText="Artboard"
+									   labelFunction="hyphenate"/>-->
 					<mx:DataGridColumn dataField="filename" dataTipField="filename" editable="true"
-									   headerText="Output Filename"/>
+									   headerText="SCREENS"/>
+					<mx:DataGridColumn dataField="fileType" dataTipField="fileType" editable="false"
+									   headerText="FILE TYPE" width="100"
+									   >
+						<mx:itemRenderer> 
+							<mx:Component> 
+								<mx:Box paddingLeft="3">
+									<mx:Script>
+										<![CDATA[
+											import managers.PublishingItem;
+											
+											import mx.events.ListEvent;
+											
+											protected function combobox1_changeHandler(event:ListEvent):void
+											{
+												// TODO Auto-generated method stub
+												(data as PublishingItem).fileType = combo.selectedItem.data; 
+											}
+											
+										]]>
+									</mx:Script>
+									<mx:ComboBox id="combo" 
+												 change="combobox1_changeHandler(event)" 
+												 selectedIndex="{[PublishingItem.PNG24, PublishingItem.JPG].indexOf((data as PublishingItem).fileType)}">
+										<mx:ArrayCollection>
+											<mx:Object label="PNG 24" data="{PublishingItem.PNG24}" />
+											<mx:Object label="JPEG" data="{PublishingItem.JPG}" />
+										</mx:ArrayCollection>
+									</mx:ComboBox>
+								</mx:Box>
+							</mx:Component>                         
+						</mx:itemRenderer> 
+						</mx:DataGridColumn>
 					<mx:DataGridColumn dataField="dimensionsString" editable="false"
-									   headerText="Dimensions"/>
+									   headerText="DIMENSIONS"/>
 				</mx:columns>
 			</mx:DataGrid>
 			
@@ -254,7 +298,8 @@
 					<mx:Button id="saveButton" width="80" height="16" label="Update"
 							   click="controller.updateNthAssetWithCurrentComposition(fileListDG.selectedIndex)"
 							   toolTip="Save current composition to selected asset"/>
-					<mx:Button width="30" height="16" click="addNewAsset_clickHandler(event)"
+					<mx:Button id="addNewAssetButton" 
+						width="30" height="16" click="addNewAsset_clickHandler(event)"
 							   disabledSkin="@Embed(source='assets/icons/new_disabled.png')"
 							   downSkin="@Embed(source='assets/icons/new_down.png')"
 							   overSkin="@Embed(source='assets/icons/new_over.png')" toolTip="New File"
