--- a/Publisher/src/Publisher.mxml
+++ b/Publisher/src/Publisher.mxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<csxs:CSXSWindowedApplication xmlns:csxs="com.adobe.csxs.core.*"
-							  xmlns:mx="http://www.adobe.com/2006/mxml"
-							  width="250" height="240" minWidth="250" minHeight="240"
-							  applicationComplete="onApplicationComplete()" close="onClose()"
-							  historyManagementEnabled="false"
-							  horizontalScrollPolicy="off" layout="absolute" showStatusBar="false"
-							  usePreloader="false"
-							  >
+<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" 
+				xmlns:csxs="com.adobe.csxs.core.*"
+				width="100%" height="100%" minWidth="250" minHeight="240"
+				applicationComplete="onApplicationComplete()"
+				historyManagementEnabled="false"
+				horizontalScrollPolicy="off" layout="absolute"
+				usePreloader="false"
+				>
 	<mx:Script>
 		<![CDATA[
 			import com.adobe.csawlib.illustrator.Illustrator;
 			import com.adobe.illustrator.*;
 			
+			import events.FileExportEvent;
+			
 			import flash.filesystem.File;
 			
 			import managers.*;
+			import managers.platforms.IllustratorController;
 			
 			import mx.collections.ArrayCollection;
 			import mx.controls.ToolTip;
@@ -32,28 +35,39 @@
 			
 			
 			private function onApplicationComplete():void{
+				AutoTheme.sync();
+				
 				model = AppModel.getInstance();
 				model.dataGridProvider = dataGridProvider;
 				model.readyState();
+				trace('ononApplicationComplete');
+				
+				formatNamesCB.selectedIndex = 2;
 				controller = AppController.getInstance();
 				watcher = AppLifeCycle.getInstance();
 				
 				
-				watcher.addEventListener("documentAfterDeactivate", function(event:Event):void {
-					model.save();
-					fileListDG.destroyItemEditor();
-				});
 				
 				ToolTipManager.showDelay = 1000;
 				ToolTipManager.hideDelay = 10000;
+				controller.fileListDG = fileListDG;
+				controller.documentActivated();		
+				
+				
+				(controller.appController as EventDispatcher).addEventListener(FileExportEvent.FILE_EXPORT, exportFileHandler);
 				
 				styleDeclaration.setStyle("backgroundColor", "0xFFFFFF");
-				//				{controller.skin.appBarBackgroundColor}
 			}
 			
-			private function onClose():void{
-				if (controller) controller.detach();
-			}			
+			private function exportFileHandler(event:Event):void {
+				trace ("fileExport");
+				trace ("");
+				
+				(controller.appController as IllustratorController).app.redraw();
+				progressBox.width += 30;
+				progressBox.validateNow();
+				(controller.appController as IllustratorController).app.redraw();
+			}
 			
 			// Вызывается как-то часто по событию ValueCommit. 
 			// Нужно апдейтить по изменению selectedIndex
@@ -115,22 +129,22 @@
 			
 			protected function dataGridProvider_collectionChangeHandler(event:CollectionEvent):void
 			{
-				trace('COLLECTION CHANGED');
 				// TODO Auto-generated method stub
 				if (!model) return;
 				model.gridChanged();
-				fileListDG.validateNow();
-				fileListDG.scrollToIndex(model.dataGridProvider.length);
-				
+				if (model.dataGridProvider) {
+					fileListDG.validateNow();
+					fileListDG.scrollToIndex(model.dataGridProvider.length);
+				}
 			}
 			
 			public function selectSaveDir(event:*):void {
 				try {
-					var f:File = new File();
-					f.browseForDirectory("Select directory to export your assets...");
-					f.addEventListener(Event.SELECT, function(event:Event):void {
-						model.pathToPublish = f.nativePath;
-					});
+				var f:File = new File();
+				f.browseForDirectory("Select directory to export your assets...");
+				f.addEventListener(Event.SELECT, function(event:Event):void {
+					model.pathToPublish = f.nativePath;
+				});
 				} catch (e:Error) {
 					trace('[Exception]' + e);					
 				}
@@ -142,46 +156,34 @@
 				
 				// TODO Auto-generated method stub
 				model.pathToPublish = pathInput.text;
-				//				model.save(); //todo: если приложение закрывается, то не приводить к model.save
-			}
-			
-			protected function importArtboardsButton_clickHandler(event:MouseEvent):void
-			{
-				// TODO Auto-generated method stub
-				
-				model.importArtboards();
+//				model.save(); //todo: если приложение закрывается, то не приводить к model.save
 			}
 			
 		]]>
 	</mx:Script>
 	
-	<!--<mx:Style source="assets/css/style.css"/>	-->
-	
-	<mx:Box id="welcomeView"
+	<mx:Style source="assets/css/style.css"/>
+
+	<mx:Box id="welcomeView" width="100%" height="100%"
 			visible="{model.state == 'welcome'}" 
 			includeInLayout="{this.visible}" 
 			horizontalCenter="0" 
 			verticalCenter="0">
-		<mx:VBox>
+		<mx:VBox left="40" top="100">
 			<mx:Label text="Welcome!"/>
 			<mx:Label text="Set up assets now to start working."/>
-			<mx:Button label="Import artboards" id="importArtboardsButton" click="importArtboardsButton_clickHandler(event)"/>
+			<mx:Button label="Import artboards" click="model.setupDefault()"/>
 		</mx:VBox>
 	</mx:Box>
 	
+
 	
-	<mx:Box id="noDataView"
-			visible="{model.state == 'disabled'}" 
-			includeInLayout="{this.visible}" 
-			horizontalCenter="0" 
-			verticalCenter="0">
-		<mx:Label text="Open document to export assets"/>
-	</mx:Box>
-	
-	<mx:Box id="mainView" 
-			width="100%" height="100%"
+	<mx:VBox id="mainView" width="100%" height="100%"
 			visible="{model.state == 'normal'}" 
 			includeInLayout="{this.visible}">
+		<mx:Box id="progressBox" width="20" height="10" backgroundColor="0xFF0000">
+		</mx:Box>
+
 		
 		<mx:VBox width="100%" height="100%" verticalGap="3">
 			<mx:DataGrid id="fileListDG" 
@@ -204,6 +206,12 @@
 						 verticalGridLineColor="0xB2B2B2"
 						 verticalGridLines="false"
 						 horizontalGridLines="false"
+						 
+						 allowMultipleSelection="true" 
+						 dragEnabled="true" 
+						 dropEnabled="true"
+						 dragMoveEnabled="true"
+						 sortableColumns="false"
 						 >
 				<mx:ArrayCollection id="dataGridProvider" collectionChange="dataGridProvider_collectionChangeHandler(event)"/>
 				<mx:columns>
@@ -220,100 +228,116 @@
 							</mx:Component>                         
 						</mx:itemRenderer> 
 					</mx:DataGridColumn>
-					<!--					<mx:DataGridColumn dataField="artboardName" editable="false" headerText="Artboard"
-					labelFunction="hyphenate"/>-->
+<!--					<mx:DataGridColumn dataField="artboardName" editable="false" headerText="Artboard"
+									   labelFunction="hyphenate"/>-->
 					<mx:DataGridColumn dataField="filename" dataTipField="filename" editable="true"
 									   headerText="SCREENS"/>
 					<mx:DataGridColumn dataField="fileType" dataTipField="fileType" editable="false"
-									   headerText="FILE TYPE" width="100"
+									   headerText="FILE TYPE" width="60"
 									   >
-						<!--						<mx:itemRenderer> 
-						<mx:Component> 
-						<mx:Box paddingLeft="3">
-						<mx:Script>
-						<![CDATA[
-						import managers.PublishingItem;
-						
-						import mx.events.ListEvent;
-						
-						protected function combobox1_changeHandler(event:ListEvent):void
-						{
-						// TODO Auto-generated method stub
-						(data as PublishingItem).fileType = combo.selectedItem.data; 
-						}
-						
-						]]>
-						</mx:Script>
-						<mx:ComboBox id="combo" 
-						change="combobox1_changeHandler(event)" 
-						selectedIndex="{[PublishingItem.PNG24, PublishingItem.JPG].indexOf((data as PublishingItem).fileType)}">
-						<mx:ArrayCollection>
-						<mx:Object label="PNG 24" data="{PublishingItem.PNG24}" />
-						<mx:Object label="JPEG" data="{PublishingItem.JPG}" />
-						</mx:ArrayCollection>
-						</mx:ComboBox>
-						</mx:Box>
-						</mx:Component>                         
+<!--						<mx:itemRenderer> 
+							<mx:Component> 
+								<mx:Box paddingLeft="3">
+									<mx:Script>
+										<![CDATA[
+											import managers.PublishingItem;
+											
+											import mx.events.ListEvent;
+											
+											protected function combobox1_changeHandler(event:ListEvent):void
+											{
+												// TODO Auto-generated method stub
+												(data as PublishingItem).fileType = combo.selectedItem.data; 
+											}
+											
+										]]>
+									</mx:Script>
+									<mx:ComboBox id="combo" 
+												 change="combobox1_changeHandler(event)" 
+												 selectedIndex="{[PublishingItem.PNG24, PublishingItem.JPG].indexOf((data as PublishingItem).fileType)}">
+										<mx:ArrayCollection>
+											<mx:Object label="PNG 24" data="{PublishingItem.PNG24}" />
+											<mx:Object label="JPEG" data="{PublishingItem.JPG}" />
+										</mx:ArrayCollection>
+									</mx:ComboBox>
+								</mx:Box>
+							</mx:Component>                         
 						</mx:itemRenderer>--> 
-					</mx:DataGridColumn>
+						</mx:DataGridColumn>
 					<mx:DataGridColumn dataField="dimensionsString" editable="false"
-									   headerText="DIMENSIONS"/>
+									   headerText="DIMENSIONS"
+									   />
+						<!--<mx:itemRenderer>
+							<mx:Component>
+								<mx:HBox width="100%" height="100%" borderColor="0xFF0000" borderStyle="solid" borderThickness="1">
+									<mx:Script>
+										<![CDATA[
+											import managers.PublishingItem;
+										]]>
+									</mx:Script>
+									<mx:Spacer width="0.1" />
+									<mx:Label text="{(data as PublishingItem).dimensionsString}" />
+									<mx:Box backgroundColor="0xFF0000" width="3" height="5" />
+								</mx:HBox>								
+							</mx:Component> 
+						</mx:itemRenderer> 
+					</mx:DataGridColumn>-->
 				</mx:columns>
 			</mx:DataGrid>
 			
 			
-			
-			<mx:HRule width="100%" shadowColor="0xCCCCCC" strokeColor="0x999999"/>
-			
-			<mx:HBox width="100%">
-				<mx:TextInput id="pathInput" left="16" right="6" width="100%" height="20"
-							  valueCommit="pathInput_valueCommitHandler(event)"
-							  editable="true" fontSize="9"
-							  text="{model.pathToPublish != null?model.pathToPublish:''}"
-							  />
-				<mx:Button label="..." click="selectSaveDir(event)"/>
 				
-				<mx:ComboBox id="formatNamesCB" visible="false" width="80"
-							 change="formatNamesCB_changeHandler(event)"
-							 dataProvider="{model.formatNames}" includeInLayout="false"
-							 valueCommit="formatNamesCB_changeHandler(event)"/>			
+				<mx:HRule width="100%" shadowColor="0xCCCCCC" strokeColor="0x999999"/>
 				
-			</mx:HBox>		
-			
-			<mx:HRule width="100%" shadowColor="0xCCCCCC" strokeColor="0x999999"/>
-			
-			<mx:HBox width="100%" horizontalGap="2" paddingBottom="1">
-				<mx:Button width="80" height="16" label="Publish" click="controller.export()"
-						   toolTip="Publish assets"/>
+				<mx:HBox width="100%">
+					<mx:TextInput id="pathInput" left="16" right="6" width="100%" height="20"
+								  valueCommit="pathInput_valueCommitHandler(event)"
+								  editable="true" fontSize="9"
+								  text="{model.pathToPublish != null?model.pathToPublish:''}"
+								  />
+					<mx:Button label="..." click="selectSaveDir(event)"/>
+					
+					<mx:ComboBox id="formatNamesCB" visible="false" width="80"
+								 change="formatNamesCB_changeHandler(event)"
+								 dataProvider="{model.formatNames}" includeInLayout="false"
+								 valueCommit="formatNamesCB_changeHandler(event)"/>			
+					
+				</mx:HBox>		
 				
-				<mx:Button id="saveButton" width="80" height="16" label="Update"
-						   click="controller.updateNthAssetWithCurrentComposition(fileListDG.selectedIndex)"
-						   toolTip="Save current composition to selected asset"/>
+				<mx:HRule width="100%" shadowColor="0xCCCCCC" strokeColor="0x999999"/>
 				
-				<mx:Spacer width="100%" />
-				
-				<mx:Button id="addNewAssetButton" 
-						   width="30" height="16" click="addNewAsset_clickHandler(event)"
-						   disabledSkin="@Embed(source='assets/icons/new_disabled.png')"
-						   downSkin="@Embed(source='assets/icons/new_down.png')"
-						   overSkin="@Embed(source='assets/icons/new_over.png')" toolTip="New File"
-						   upSkin="@Embed(source='assets/icons/new.png')"/>
-				<mx:Button width="30" height="16"
-						   click="controller.deleteSelectedFile(fileListDG.selectedItem, fileListDG.selectedIndex)"
-						   disabledSkin="@Embed(source='assets/icons/delete_disabled.png')"
-						   downSkin="@Embed(source='assets/icons/delete_down.png')"
-						   enabled="{model.dataGridProvider.length &gt; 0}"
-						   overSkin="@Embed(source='assets/icons/delete_over.png')"
-						   toolTip="Delete File" upSkin="@Embed(source='assets/icons/delete.png')"/>
-				
-				<mx:Spacer width="12" />
-				
-				
-			</mx:HBox>
+				<mx:HBox width="100%" horizontalGap="2" paddingBottom="1">
+					<mx:Button width="80" height="16" label="Publish" click="controller.export()"
+							   toolTip="Publish assets"/>
+					
+					<mx:Button id="saveButton" width="80" height="16" label="Update"
+							   click="controller.updateNthAssetWithCurrentComposition(fileListDG.selectedIndex)"
+							   toolTip="Save current composition to selected asset"/>
+					
+					<mx:Spacer width="100%" />
+					
+					<mx:Button id="addNewAssetButton" 
+						width="30" height="16" click="addNewAsset_clickHandler(event)"
+							   disabledSkin="@Embed(source='assets/icons/new_disabled.png')"
+							   downSkin="@Embed(source='assets/icons/new_down.png')"
+							   overSkin="@Embed(source='assets/icons/new_over.png')" toolTip="New File"
+							   upSkin="@Embed(source='assets/icons/new.png')"/>
+					<mx:Button width="30" height="16"
+							   click="controller.deleteSelectedFile(fileListDG.selectedItem, fileListDG.selectedIndex)"
+							   disabledSkin="@Embed(source='assets/icons/delete_disabled.png')"
+							   downSkin="@Embed(source='assets/icons/delete_down.png')"
+							   enabled="{model.dataGridProvider.length &gt; 0}"
+							   overSkin="@Embed(source='assets/icons/delete_over.png')"
+							   toolTip="Delete File" upSkin="@Embed(source='assets/icons/delete.png')"/>
+					
+					<mx:Spacer width="12" />
+
+					
+				</mx:HBox>
 			
 		</mx:VBox>
 		
 		
-	</mx:Box>
+	</mx:VBox>
 	
-</csxs:CSXSWindowedApplication>
+</mx:Application>
