--- a/Publisher/src/Publisher.mxml
+++ b/Publisher/src/Publisher.mxml
@@ -36,19 +36,36 @@
 			
 			private function onApplicationComplete():void{
 				model = AppModel.getInstance();
-				model.dataGridProvider = dataGridProvider;
-
+				
+				model.addEventListener("dataGridProviderChanged", function(event:Event):void {
+					gc.refresh();
+//					grid.invalidateList();
+					
+					grid.expandAll();
+				});
+				
+				
+				
 //				formatNamesCB.selectedIndex = 2;
 				controller = AppController.getInstance();
 				
-				ToolTipManager.showDelay = 1000;
+//				controller.addEventListener("documentAfterActivate", function(event:*):void {
+//					if (grid) grid.expandAll();
+//				});
+				
+					ToolTipManager.showDelay = 1000;
 				ToolTipManager.hideDelay = 10000;
 //				controller.fileListDG = fileListDG;
 				
 				
-////				controller.documentActivated();		
+////				controller.documentActivated();
+//				controller.documentActivated();
 				
 				styleDeclaration.setStyle("backgroundColor", "0xFFFFFF");
+			}
+			
+			private function dataChanged(event:Event):void {
+//				gc.refresh();
 			}
 						
 			private function formatNamesCB_changeHandler(event:Event):void
@@ -241,10 +258,7 @@
 								 editable="true"
 								 >
 				<mx:dataProvider>
-					<mx:GroupingCollection id="gc">
-						<mx:source>
-							<mx:ArrayCollection id="dataGridProvider" />
-						</mx:source>
+					<mx:GroupingCollection id="gc" source="{model.dataGridProvider}">
 						<mx:grouping>
 							<mx:Grouping>
 								<mx:GroupingField name="pathToPublish" />
@@ -254,8 +268,8 @@
 				</mx:dataProvider>
 				<mx:groupedColumns>   
 					<mx:AdvancedDataGridColumn id="screenNameColumn" headerText="SCREENS ASSETS" dataField="name" />
-					<mx:AdvancedDataGridColumn id="fileTypeColumn" headerText="FILE TYPE" dataField="type" />
-					<mx:AdvancedDataGridColumn id="dimensionColumn" headerText="DIMENSION" dataField="dimensionsString" />
+					<mx:AdvancedDataGridColumn id="fileTypeColumn" editable="false" headerText="FILE TYPE" dataField="type" />
+					<mx:AdvancedDataGridColumn id="dimensionColumn" editable="false" headerText="DIMENSION" dataField="dimensionsString" />
 				</mx:groupedColumns>
 				<!--<mx:rendererProviders>
 					<mx:AdvancedDataGridRendererProvider column="{screenNameColumn}" 
